nodeportservice.yaml
apiVersion: v1 
kind: Service
metadata:
  labels:
    app: nodeapp
  name: nodeapp-service
spec:
  selector:
      app: nodeapp
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
