nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
spec:
  rules:
  - host: "node.app.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nodeapp-service 
            port:
              number: 3000
